styles.css
.masthead-intro,
.masthead-heading {
  text-align: center;
}

.masthead {
  padding: 6em 0;
}

.masthead-heading {
  margin-bottom: 0.1em;
}

.masthead-intro {
  margin-top: -0.2em;
}
h1, h2, h3, h4 {
	text-align: center;
	color: #336699;
}

h1 {
	font-size: 3em;
}

h2 {
	font-size: 2em;
}

h3 {
	font-size: 1.5em;
}

h4{
	font-size: 1em;
}

section {
	width: 30%;
	float: left;
	margin: 1%;
}

